Revert "insert the admin lp image"
This reverts commit 1770b3e35f0e4fd26938406ba2ad34b6071ea6ee.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ONE TASK</title>
+    <title>ElTrainingTsukazaki</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
