refs #14591 MR後修正コミット

--- a/app/views/tasks/show.html.slim
+++ b/app/views/tasks/show.html.slim
@@ -3,6 +3,10 @@ p Find me in app/views/tasks/show.html.slim
 
 
 p Name:
-= @task.name
+  #{@task.name}
 p Memo:
-= @task.memo
+  #{@task.memo}
+p 作られた時間
+  #{@task.created_at}
+p アップデート時間
+  #{@task.updated_at}
