--- a/app/views/tasks/edit.html.slim
+++ b/app/views/tasks/edit.html.slim
@@ -1,15 +1,13 @@
 - provide(:title, "Edit user")
 
 .taskeditPage
-    h1 Create your task
+    h1 Update your profile
     .container
-        .list_header = form_with model: @task, url: { action: :create } do |f|
+        .list_header = form_for @task do |f|
             .ul
                 .li
-                    = f.label :name
                     = f.text_field :name, maxlength: 20, placeholder: '20文字制限'
                 .li
-                    = f.label :memo
                     = f.text_area :memo
                 .li
-                    = f.submit "Create"
+                    = f.submit "Submit"
