refs #14632 作成と更新機能を実装

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+
+.notifications {
+color: green;
+text-align: center;
+background-color: lightgreen;
+}
+.notifications notice {
+        background-color: lightBlue;
+}
+.notifications alert {
+        background-color: alert_orange;
+}
