--- a/app/views/tasks/new.html.slim
+++ b/app/views/tasks/new.html.slim
@@ -7,9 +7,9 @@
             .ul
                 .li
                     = f.label :name
-                    = f.text_field :name, maxlength: 20, placeholder: '20文字制限'
+                    = f.text_field :name, placeholder: '20文字制限'
                 .li
                     = f.label :memo
                     = f.text_area :memo
                 .li
-                    = f.submit "Create"
+                    = f.submit "create"
