--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,17 +15,17 @@
  */
 
 .notifications {
-        text-align: center;
+text-align: center;
 }
 .success{
-        color:rgb(0,128,0);
-        background-color: rgb(144,238,144);
+        color: #008000;
+        background-color: #90EE90;
 }
 .notice {
-        color: rgb(0,0,255);
-        background-color: rgb(173,216,230);
+        color: #0000ff;
+        background-color: #ADD8E6;
 }
 .alert {
-        color: rgb(255,0,0);
-        background-color: rgb(240,128,128);
+        color: #FF0000;
+        background-color: #F08080;
 }
