--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,14 +8,5 @@ html
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
   body
-    .notifications
-      - if flash[:success]
-        .success
-          = flash[:success]
-      - elsif flash[:notice]
-        .notice
-          = flash[:notice]
-      - elsif flash[:alert]
-        .alert
-          = flash[:alert]
+    = render 'layouts/flash'
     = yield
