--- a/app/views/tasks/edit.html.slim
+++ b/app/views/tasks/edit.html.slim
@@ -1,7 +1,7 @@
 - provide(:title, "Edit user")
-.taskeditPage
-	h1 Update your profile
-	.container
+.taskEditPage
+  h1 Update your profile
+  .container
     = form_with(model: @task, local: true, class: 'list_header') do |f|
       ul
         li
