--- a/app/views/tasks/new.html.slim
+++ b/app/views/tasks/new.html.slim
@@ -1,5 +1,5 @@
-- provide(:title, "Edit user")
-.taskeditPage
+- provide(:title, "Create user")
+.taskNewPage
   h1 Create your task
   .container
     = form_with(model: @task, local: true, class: 'list_header') do |f|
