--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -7,5 +7,5 @@ table
       td Memo: #{task.memo}
       td = link_to 'Open', task
       td = link_to 'Edit', edit_task_path(task.id)
-      td = button_to 'Delete', delete_task_path
+      td = button_to 'Delete', task, method: :delete, data:{ confirm: 'Are you sure you wanna delete this?'}
 = link_to 'New', new_task_path
