--- a/app/views/layouts/_form.html.slim
+++ b/app/views/layouts/_form.html.slim
@@ -1,5 +1,6 @@
 .container
   = form_with(model: @task, local: true, class: 'task_header') do |f|
+    = render 'shared/error', model: f.object
     ul
       li
         = f.label :name
