refs #14701 serverが立ち上がらない問題に対処/書き方を少し修正

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,6 +1,6 @@
-body {
+.body_reset {
   overflow: visible;
-  // -webkit-appearance: none;
-  // -moz-appearance: none;
-  // appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
