--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,5 +9,6 @@ html
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
   body class = "body_reset"
     == render 'layouts/header'
-    == render 'layouts/flash'
-    = yield
+    .container
+      == render 'layouts/flash'
+      == yield
