--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -2,8 +2,8 @@ h1 Tasks Table
 table
   tr
     td ID
-    td Name
-    td Memo
+    td タスク名
+    td メモ
   - @tasks.each do |task|
     tr
       td = task.id
