--- a/app/views/tasks/show.html.slim
+++ b/app/views/tasks/show.html.slim
@@ -1,9 +1,9 @@
 h1 Your Task
 dl
-  dt Name:
+  dt タスク名:
   dd
     = @task.name
-  dt Memo:
+  dt メモ:
   dd
     = simple_format(@task.memo)
   dt 作られた時間:
