refs #14961 タイトルの修正

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title
-      = content_for?(:title) ? yield(:title) : "ElTrainingTsukazaki"
+      = content_for?(:title) ? yield(:title) : "One Task"
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
