refs #14962 デフォルト設定の修正/記法修正

--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -5,7 +5,7 @@ table
     td = Task.human_attribute_name(:name)
     td = Task.human_attribute_name(:memo)
   - @tasks.each do |task|
-    tr class="task_line"
+    tr.task_line
       td = task.id
       td = task.name
       td = simple_format(task.memo)
