--- a/app/views/layouts/_form.html.slim
+++ b/app/views/layouts/_form.html.slim
@@ -9,4 +9,7 @@
         = f.label :memo
         = f.text_area :memo
       li
+        = f.label :end_time
+        = f.date_field :end_time
+      li
         = f.submit "Submit"
