--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -4,12 +4,14 @@ table
     td ID
     td = Task.human_attribute_name(:name)
     td = Task.human_attribute_name(:memo)
+    td = Task.human_attribute_name(:end_time)
   - @tasks.each do |task|
     tr
       td = task.id
       td.task_name
         = task.name
       td = simple_format(task.memo)
+      td = task.end_time
       td = link_to 'Open', task
       td = link_to 'Edit', edit_task_path(task.id)
       td = button_to 'Delete', task, method: :delete, data:{ confirm: 'Are you sure you wanna delete this?'}
