refs #14962 時間表示修正

--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -7,7 +7,7 @@ table
   - @tasks.each do |task|
     tr
       td = task.id
-      td.task_line
+      td.task_name
         = task.name
       td = simple_format(task.memo)
       td = link_to 'Open', task
