--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -4,18 +4,17 @@ table
     th ID
     th = Task.human_attribute_name(:name)
     th = Task.human_attribute_name(:memo)
-    th.pointer onclick='window.location="#{sort_tasks_path(created_at: @created_at_num)}"' role="link"
-      = @created_at
     th.pointer onclick='window.location="#{sort_tasks_path(end_time: @end_time_num)}"' role="link"
       = @end_time
-      / = Task.human_attribute_name(:end_time)
+    th.pointer onclick='window.location="#{sort_tasks_path(created_at: @created_at_num)}"' role="link"
+      = @created_at
   - @tasks.each do |task|
     tr
       td = task.id
       td.task_name
         = task.name
       td = simple_format(task.memo)
-      td = task.end_time
+      td = l task.end_time, format: :short
       td = link_to 'Open', task
       td = link_to 'Edit', edit_task_path(task.id)
       td = button_to 'Delete', task, method: :delete, data:{ confirm: 'Are you sure you wanna delete this?'}
