--- a/app/views/layouts/_form.html.slim
+++ b/app/views/layouts/_form.html.slim
@@ -12,4 +12,7 @@
         = f.label :end_time
         = f.date_field :end_time, value: Time.zone.today
       li
+        = f.label :status
+        = f.select :status, ["Not yet", "WIP", "Done"]
+      li
         = f.submit "Submit"
