refs #15116 searchメソッドの追加/検索機能の実装

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -8,3 +8,11 @@ body {
     margin: 16px;
   }
 }
+.container{
+  .search_form {
+    text-align: right;
+  }
+  .task_item{
+    text-align: left;
+  }
+}
