--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,5 +10,6 @@ html
   body class = "body_reset"
     == render 'layouts/header'
     .container
+      == render 'shared/search_form'
       == render 'layouts/flash'
       == yield
