refs #15077 ソート機能の修正途中

--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -4,9 +4,9 @@ table
     th ID
     th = Task.human_attribute_name(:name)
     th = Task.human_attribute_name(:memo)
-    th.end_pointer onclick='window.location="#{sort_tasks_path(end_time: @end_time_num)}"' role="link"
+    th.end_pointer onclick='window.location="#{tasks_path(end_time: @end_time_num)}"' role="link"
       = @end_time
-    th.create_pointer onclick='window.location="#{sort_tasks_path(created_at: @created_at_num)}"' role="link"
+    th.create_pointer onclick='window.location="#{tasks_path(created_at: @created_at_num)}"' role="link"
       = @created_at
   - @tasks.each do |task|
     tr
