--- a/app/views/layouts/_form.html.slim
+++ b/app/views/layouts/_form.html.slim
@@ -10,6 +10,6 @@
         = f.text_area :memo
       li
         = f.label :end_time
-        = f.date_field :end_time
+        = f.date_field :end_time, value: Time.zone.today
       li
         = f.submit "Submit"
