--- a/app/views/layouts/_form.html.slim
+++ b/app/views/layouts/_form.html.slim
@@ -7,7 +7,7 @@
         = f.text_field :name, placeholder: '20文字制限'
       li
         = f.label :memo
-        = f.text_area :memo
+        = f.text_area :memo, placeholder: '100文字制限'
       li
         = f.label :end_time
         = f.date_field :end_time, value: Time.zone.today
