--- a/app/views/shared/_search_form.html.slim
+++ b/app/views/shared/_search_form.html.slim
@@ -1,5 +1,5 @@
 .search_form
-  = form_tag(search_path, method: :get) do
-    = text_field_tag 'search[content]'
+  = form_tag(tasks_path, method: :get) do
+    = text_field_tag 'search[content]', '', placeholder: "検索"
     = select_tag 'search[model]', options_for_select({"Task"=>"task", "Status"=>"status"})
     = submit_tag '検索', class:"btn btn-primary"
