--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -4,9 +4,9 @@ table
     th ID
     th = Task.human_attribute_name(:name)
     th = Task.human_attribute_name(:memo)
-    th.end_pointer onclick='window.location="#{tasks_path(end_time: "i")}"' role="link"
+    th.end_pointer onclick='window.location="#{tasks_path(sort_column: "end_time")}"' role="link"
       = end_time_sub
-    th.create_pointer onclick='window.location="#{tasks_path(created_at: "i")}"' role="link"
+    th.create_pointer onclick='window.location="#{tasks_path(sort_column: "created_at")}"' role="link"
       = created_at_sub
   - @tasks.each do |task|
     tr
