--- a/app/views/layouts/_form.html.slim
+++ b/app/views/layouts/_form.html.slim
@@ -1,4 +1,4 @@
-.container
+w.container
   = form_with(model: @task, local: true, class: 'task_header') do |f|
     == render 'shared/error', model: f.object
     ul
@@ -10,9 +10,10 @@
         = f.text_area :memo, placeholder: '100文字制限'
       li
         = f.label :end_time
-        = f.date_field :end_time, value: Time.zone.today
+        = f.date_field :end_time
       li
         = f.label :status
+          status_menu
         = f.select :status, ["Not yet", "WIP", "Done"]
       li
         = f.submit "Submit"
