refs #15116 Specの実装/css編集

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "flash";
 @import "tasks";
 @import "custom";
+@import "search_form";
 
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
