refs #15116 ストロングパラメーターを設定

--- a/app/views/layouts/_form.html.slim
+++ b/app/views/layouts/_form.html.slim
@@ -1,4 +1,4 @@
-w.container
+.container
   = form_with(model: @task, local: true, class: 'task_header') do |f|
     == render 'shared/error', model: f.object
     ul
