refs #15175 優先順位のソート実装

--- a/app/views/layouts/_form.html.slim
+++ b/app/views/layouts/_form.html.slim
@@ -16,4 +16,8 @@
           status_menu
         = f.select :status, Task.statuses.keys.to_a
       li
+        = f.label :priority
+          priority_menu
+        = f.select :priority, Task.priorities.keys.to_a
+      li
         = f.submit "Submit"
