--- a/app/views/tasks/show.html.slim
+++ b/app/views/tasks/show.html.slim
@@ -14,3 +14,5 @@ dl
   dd = l @task.updated_at
   dt #{Task.human_attribute_name(:status)}:
   dd = @task.status
+  dt #{Task.human_attribute_name(:priority)}:
+  dd = @task.priority
