refs #15175 優先順位のソート実装

--- a/app/views/shared/_search_form.html.slim
+++ b/app/views/shared/_search_form.html.slim
@@ -2,4 +2,5 @@
   ul = form_tag(tasks_path, method: :get) do
     li = search_field_tag('search[content]', search_content_params, placeholder: "検索")
     li = select_tag 'search[status]', options_for_select({"- Choose Status -"=>"","Untouched"=>"0", "WIP"=>"1", "Done"=>"2"}, search_status_params)
+    li = select_tag 'search[priority]', options_for_select({"- Choose Priority -"=>"","Low"=>"0", "Medium"=>"1", "High"=>"2"})
     li = submit_tag '検索', class:"btn btn-primary"
