--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -26,3 +26,4 @@ table
       td = link_to 'Edit', edit_task_path(task.id)
       td = button_to 'Delete', task, method: :delete, data:{ confirm: 'Are you sure you wanna delete this?'}
       td = button_to 'Done', done_path(task), method: :post
+= paginate @tasks
