--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,7 @@
 @import "tasks";
 @import "custom";
 @import "search_form";
+@import "form";
 
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
