--- a/app/assets/stylesheets/search_form.scss
+++ b/app/assets/stylesheets/search_form.scss
@@ -1,10 +1,12 @@
 .search_form {
-text-align: right;
-  ul {
+  text-align: right;
+  .form-row {
     margin: 0;
-    list-style: none;
+    margin-left: auto;
+    .form{
+      margin-left: 100px;
+    }
   }
-  li {
-    list-style: none;
+  .form-group {
   }
 }
