--- a/app/views/layouts/_form.html.slim
+++ b/app/views/layouts/_form.html.slim
@@ -1,23 +1,21 @@
-.container
-  = form_with(model: @task, local: true, class: 'task_header') do |f|
+.form class="shadow p-3 mb-5 rounded"
+  = form_with(model: @task, local: true, class: 'form-group') do |f|
     == render 'shared/error', model: f.object
-    ul
-      li
-        = f.label :name
-        = f.text_field :name, placeholder: '20文字制限'
-      li
-        = f.label :memo
-        = f.text_area :memo, placeholder: '100文字制限'
-      li
+    .form-group
+      = f.label :name
+      = f.text_field :name, class: 'form-control col-md-9' , placeholder: '20文字制限'
+    .form-group
+      = f.label :memo
+      = f.text_area :memo, rows: 5, class: 'form-control col-md-9', placeholder: '100文字制限'
+    .form-row
+      .col-md-3
         = f.label :end_time
-        = f.date_field :end_time
-      li
+        = f.date_field :end_time, class: 'form-control'
+      .col-md-3
         = f.label :status
-          status_menu
-        = f.select :status, Task.statuses.keys.to_a
-      li
+        = f.select :status, Task.statuses.keys.to_a, {}, class: 'form-control'
+      .col-md-3
         = f.label :priority
-          priority_menu
-        = f.select :priority, Task.priorities.keys.to_a
-      li
-        = f.submit "Submit"
+        = f.select :priority, Task.priorities.keys.to_a, {}, class: 'form-control'
+    .form-group
+      = f.submit "Submit", class:"btn btn-outline-warning"
