--- a/app/views/layouts/_form.html.slim
+++ b/app/views/layouts/_form.html.slim
@@ -10,6 +10,7 @@
     .form-row
       .col-md-3
         = f.label :end_time
+          / i class="fa fa-calender fa-lg"
         = f.date_field :end_time, class: 'form-control'
       .col-md-3
         = f.label :status
