--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -23,7 +23,9 @@ table class = "table table-hover"
       td.task_priority
         = task.priority
       td = link_to 'Open', task
-      td = link_to 'Edit', edit_task_path(task.id)
-      td = button_to 'Delete', task, method: :delete, data:{ confirm: 'Are you sure you wanna delete this?'}
+      td = link_to edit_task_path(task.id)
+        i class="fa fa-edit fa-2x"
+      td = button_to task, method: :delete, data:{ confirm: 'Are you sure you wanna delete this?'}
+        i class="fa fa-trash fa-2x"
       td = button_to 'Done', done_path(task), method: :post
 = paginate @tasks
