refs #15177 フォント、幅調整

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -6,6 +6,9 @@ body {
   appearance: none;
   .container{
     margin: 8px 16px;
+    .h1{
+      margin-bottom: 2rem;
+    }
   }
 }
 .container{
@@ -13,8 +16,22 @@ body {
     text-align: left;
   }
 }
+.table td {
+  padding: 20px;
+}
 .table{
   padding: 20px;
+  td{
+    padding: 0;
+    .task_id{
+      padding: 0;
+    }
+    a{
+      height: 100%;
+      padding: 0;
+      margin: 0 12px 12px 0;
+    }
+  }
 }
 .pagination{
   justify-content: center;
