--- a/app/views/layouts/_form.html.slim
+++ b/app/views/layouts/_form.html.slim
@@ -1,4 +1,4 @@
-.form class="shadow p-3 mb-5 rounded"
+.form class="shadow p-5 rounded"
   = form_with(model: @task, local: true, class: 'form-group') do |f|
     == render 'shared/error', model: f.object
     .form-group
