--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -1,6 +1,6 @@
 h1 Tasks Table
 table class = "table table-hover"
-  tr class = "task_item  bg-white"
+  tr class = "task_category bg-white"
     th ID
     th = Task.human_attribute_name(:name)
     th = Task.human_attribute_name(:memo)
@@ -11,21 +11,23 @@ table class = "table table-hover"
     th.priority_pointer onclick='window.location="#{tasks_path(sort_column: "priority")}"' role="link"
       = priority_sub
   - @tasks.each do |task|
-    tr class="shadow-sm p-3 mb-5 rounded"
-      td = task.id
+    tr class="task_category shadow-sm rounded"
+      td.task_id
+        = link_to task
+          = task.id
       td.task_name
         = task.name
       td = simple_format(task.memo)
+        = link_to task
       td.task_end_time
         = l task.end_time, format: :short
       td.task_status
         = task.status
       td.task_priority
         = task.priority
-      td = link_to 'Open', task
       td = link_to edit_task_path(task.id)
         i class="fa fa-edit fa-2x"
-      td = button_to task, method: :delete, data:{ confirm: 'Are you sure you wanna delete this?'}
+      td = link_to task, method: :delete, data:{ confirm: 'Are you sure you wanna delete this?'}
         i class="fa fa-trash fa-2x"
       td = button_to 'Done', done_path(task), method: :post
 = paginate @tasks
