refs #15177 gemからbootstrap, jqueryを削除対応

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,9 +1,4 @@
-@import "header";
-@import "flash";
-@import "tasks";
-@import "custom";
-@import "search_form";
-@import "form";
+@import "~bootstrap/scss/bootstrap";
 
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
@@ -17,4 +12,6 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ *= require_tree .
+ *= require_self
  */
