--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,5 +12,5 @@ html
     == render 'layouts/header'
     == render 'layouts/flash'
     .container
-      == render 'shared/search_form'
+      == render 'shared/search_form' if current_user.present?
       == yield
