--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -27,9 +27,10 @@ table.table.table-hover.table-sm
         = task.status
       td.task_priority
         = task.priority
-      td = link_to edit_task_path(task.id)
-        i.fa.fa-edit.fa-2x
-      td = link_to task, method: :delete, data:{ confirm: 'Are you sure you wanna delete this?'}
-        i.fa.fa-trash.fa-2x
+      td
+        = link_to edit_task_path(task.id)
+          i.fa.fa-edit.fa-2x
+        = link_to task, method: :delete, data:{ confirm: 'Are you sure you wanna delete this?'}
+          i.fa.fa-trash.fa-2x
       td = button_to 'Done', done_path(task), method: :post, class:"btn btn-outline-warning"
 = paginate @tasks
