--- a/app/views/admin/users/show.html.slim
+++ b/app/views/admin/users/show.html.slim
@@ -1,2 +1,30 @@
-h1 Admin::Users#show
-p Find me in app/views/admin/users/show.html.slim
+- provide(:title, "User Page")
+h1 User Page
+
+table.table.table-striped
+  tbody
+    tr
+      th= User.human_attribute_name(:id)
+      td= @user.id
+    tr
+      th= User.human_attribute_name(:name)
+      td= @user.name
+    tr
+      th= User.human_attribute_name(:email)
+      td= @user.email
+    tr
+      th= User.human_attribute_name(:admin)
+      td= @user.admin? ? 'Admin' : 'Not admin'
+    tr
+      th= User.human_attribute_name(:created_at)
+      td= l @user.created_at
+    tr
+      th= User.human_attribute_name(:updated_at)
+      td= l @user.updated_at
+.btn-group.d-flex.justify-content-center
+  .btn
+    = link_to edit_admin_user_path(@user.id)
+      i.fa.fa-edit.fa-2x
+  .btn
+    = link_to [:admin, @user], method: :delete, data:{ confirm: 'Are you sure you wanna delete this?'}
+      i.fa.fa-trash.fa-2x
