--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -4,7 +4,10 @@
       = link_to 'One Task', root_path
     - if current_user
       li= link_to 'New', new_task_path
-      li.nav-item= link_to 'ログアウト', logout_path, class: 'nav-link'
+      li
+        ul
+          li= link_to 'All User', admin_users_path, class: 'nav-link'
+          li= link_to 'ログアウト', logout_path, class: 'nav-link'
     - else
       li.nav-item= link_to 'ログイン', login_path, class: 'nav-link'
 
