--- a/app/assets/stylesheets/search_form.scss
+++ b/app/assets/stylesheets/search_form.scss
@@ -1,9 +1,12 @@
 .search_form {
-  .form-group{
-    margin: 3px;
-    text-align: right;
+  margin-top: 10px;
+  margin-right: 30px;
+    .form-group{
+      margin: 3px;
+      text-align: right;
+    }
   }
-}
+
 form .btn{
   margin-top: 5px;
 }
