--- a/app/views/admin/users/show.html.slim
+++ b/app/views/admin/users/show.html.slim
@@ -21,10 +21,11 @@ table.table.table-striped
     tr
       th= User.human_attribute_name(:updated_at)
       td= l @user.updated_at
-.btn-group.d-flex.justify-content-center
-  .btn
-    = link_to edit_admin_user_path(@user.id)
-      i.fa.fa-edit.fa-2x
-  .btn
-    = link_to [:admin, @user], method: :delete, data:{ confirm: 'Are you sure you wanna delete this?'}
-      i.fa.fa-trash.fa-2x
+- if current_user.admin?
+  .btn-group.d-flex.justify-content-center
+    .btn
+      = link_to edit_admin_user_path(@user.id)
+        i.fa.fa-edit.fa-2x
+    .btn
+      = link_to [:admin, @user], method: :delete, data:{ confirm: 'Are you sure you wanna delete this?'}
+        i.fa.fa-trash.fa-2x
