refs #15696 ユーザーのタスク一覧が見れるよう実装

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
 @import "custom";
 @import "search_form";
 @import "form";
+@import "admin/users";
 
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
