--- a/app/assets/stylesheets/admin/users.scss
+++ b/app/assets/stylesheets/admin/users.scss
@@ -1,3 +1,5 @@
-// Place all the styles related to the Admin::Users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+.btn.rounded-circle{
+  width: 58px;
+  margin: 0 20px 50px 20px;
+  padding: 18px 0;
+}
