--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,11 +1,10 @@
 .header{
   ul {
     margin: 0;
-    padding: 10px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    background-color: #FF7F50; 
+    justify-content: space-between;
+    background-color: #FF7F50;
   }
   li {
     list-style: none;
