--- a/app/views/admin/users/show.html.slim
+++ b/app/views/admin/users/show.html.slim
@@ -21,11 +21,36 @@ table.table.table-striped
     tr
       th= User.human_attribute_name(:updated_at)
       td= l @user.updated_at
+
 - if current_user.admin?
-  .btn-group.d-flex.justify-content-center
-    .btn
-      = link_to edit_admin_user_path(@user.id)
-        i.fa.fa-edit.fa-2x
-    .btn
-      = link_to [:admin, @user], method: :delete, data:{ confirm: 'Are you sure you wanna delete this?'}
-        i.fa.fa-trash.fa-2x
+  .nav.nav-pills.d-flex.justify-content-center
+    = link_to edit_admin_user_path(@user.id)
+      i.fa.fa-edit.fa-2x.btn.btn.btn-outline-warning.rounded-circle
+    = link_to [:admin, @user], method: :delete, data:{ confirm: 'Are you sure you wanna delete this?'}
+      i.fa.fa-trash.fa-2x.btn.btn.btn-outline-warning.rounded-circle
+
+- if @user.tasks.present?
+  table.table.table-hover.table-sm
+    tr.task_category.bg-white
+      th ID
+      th = Task.human_attribute_name(:name)
+      th = Task.human_attribute_name(:memo)
+      th = Task.human_attribute_name(:end_time)
+      th = Task.human_attribute_name(:status)
+      th = Task.human_attribute_name(:priority)
+    - @user.tasks.each do |task|
+      tr.task_category.shadow-sm.rounded
+        td.task_id
+          = link_to task
+            = task.id
+        td.task_name
+          = task.name
+        td = simple_format(task.memo)
+          = link_to task
+        td.task_end_time
+          = l task.end_time, format: :short
+        td.task_status
+          = task.status
+        td.task_priority
+          = task.priority
+
