--- a/app/views/admin/users/_form.html.slim
+++ b/app/views/admin/users/_form.html.slim
@@ -2,7 +2,7 @@
   = form_with( model: [:admin, @user], local: true, class: 'form-group') do |f|
     == render 'shared/error', model: f.object
     .form-group
-      = f.label :name, '名前'
+      = f.label :name, 'ユーザー名'
       = f.text_field :name, class: 'form-control col-md-9', placeholder: 'ユーザー名'
     .form-group
       = f.label :email, 'メールアドレス'
@@ -18,5 +18,5 @@
       = f.label :password_confirmation, '確認用パスワード'
       = f.password_field :password_confirmation, class: 'form-control col-md-9'
     .form-group
-      = f.submit 'Create', class:"btn btn-outline-warning"
+      = f.submit 'Submit', class:"btn btn-outline-warning"
 
