--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -10,8 +10,7 @@ table.table.table-hover.table-sm
     th タスク数
   - @users.each do |user|
     tr.user_category.shadow-sm.rounded
-      td.user_id
-        = link_to [:admin, user]
+      td = link_to [:admin, user]
           = user.id
       td.user_name
         = user.name
@@ -19,11 +18,12 @@ table.table.table-hover.table-sm
       td.user_admin
         = user.admin? ? 'Admin' : 'Not admin'
       td = l user.created_at, format: :short
-      td = user.tasks.count
+      td.tasks_number
+        = user.tasks.count
       td
         - if current_user.admin?
           = link_to edit_admin_user_path(user.id)
             i.fa.fa-edit.fa-2x
           = link_to [:admin, user], method: :delete, data:{ confirm: 'Are you sure you wanna delete this?'}
             i.fa.fa-trash.fa-2x
-/ = paginate @users
+
