--- a/app/views/admin/users/edit.html.slim
+++ b/app/views/admin/users/edit.html.slim
@@ -1,4 +1,4 @@
 - provide(:title,  "Edit User")
 h1 Edit User
 .userEditPage
-== render partial: 'form', locals: { user: @user }
+== render partial: 'form', user: @user
