--- a/app/views/admin/users/new.html.slim
+++ b/app/views/admin/users/new.html.slim
@@ -1,4 +1,4 @@
 - provide(:title, "Create User")
 h1 Create User
 .userCreatePage
-  == render partial: 'form', locals: { user: @user }
+  == render partial: 'form', user: @user
