--- a/app/views/admin/users/show.html.slim
+++ b/app/views/admin/users/show.html.slim
@@ -24,10 +24,10 @@ table.table.table-striped
 
 - if current_user.admin?
   .nav.nav-pills.d-flex.justify-content-center
-    = link_to edit_admin_user_path(@user.id)
-      i.fa.fa-edit.fa-2x.btn.btn.btn-outline-warning.rounded-circle
-    = link_to [:admin, @user], method: :delete, data:{ confirm: 'Are you sure you wanna delete this?'}
-      i.fa.fa-trash.fa-2x.btn.btn.btn-outline-warning.rounded-circle
+    = link_to edit_admin_user_path(@user)
+      i.fa.fa-edit.fa-2x.btn.btn-outline-warning.rounded-circle
+    = link_to [:admin, @user], method: :delete, data:{ confirm: "Are you sure you wanna delete 【#{@user.name}】?"}
+      i.fa.fa-trash.fa-2x.btn.btn-outline-warning.rounded-circle
 
 - if @user.tasks.present?
   table.table.table-hover.table-sm
@@ -41,12 +41,11 @@ table.table.table-striped
     - @user.tasks.each do |task|
       tr.task_category.shadow-sm.rounded
         td.task_id
-          = link_to task
+          = link_to task do
             = task.id
         td.task_name
           = task.name
         td = simple_format(task.memo)
-          = link_to task
         td.task_end_time
           = l task.end_time, format: :short
         td.task_status
