--- a/app/views/tasks/show.html.slim
+++ b/app/views/tasks/show.html.slim
@@ -24,10 +24,10 @@ table.table.table-striped
 
 .btn-group.d-flex.justify-content-center
   .btn
-    = link_to edit_task_path(@task.id)
+    = link_to edit_task_path(@task)
       i.fa.fa-edit.fa-2x
   .btn
-    = link_to @task, method: :delete, data:{ confirm: 'Are you sure you wanna delete this?'}
+    = link_to @task, method: :delete, data:{ confirm: "Are you sure you wanna delete　【#{@task.name}】?"}
       i.fa.fa-trash.fa-2x
   .btn
     = button_to 'Done', done_path(@task), method: :post, class:"btn btn-outline-warning"
