--- a/app/views/shared/_error.html.slim
+++ b/app/views/shared/_error.html.slim
@@ -3,5 +3,5 @@
     h3 The form contains #{pluralize(model.errors.count, "error")}
     ul
       - model.errors.full_messages.each do |msg|
-        li
+        li.error
           = msg
