--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -9,7 +9,8 @@
       li= link_to 'New', new_task_path
       li
         ul
-          li= link_to 'All User', admin_users_path, class: 'nav-link'
+          - if current_user.admin?
+            li= link_to 'All User', admin_users_path, class: 'nav-link'
           li= link_to 'ログアウト', logout_path, class: 'nav-link'
     - else
       li.nav-item= link_to 'ログイン', login_path, class: 'nav-link'
