--- a/app/views/errors/forbidden.html.slim
+++ b/app/views/errors/forbidden.html.slim
@@ -1,3 +1,3 @@
 h1 403 Forbidden
 p  指定されたページを表示する権限がありません
-= link_to 'Taskページへ戻る', root_path, class:"btn btn-outline-warning"
+= link_to 'Taskページへ戻る', tasks_path, class:"btn btn-outline-warning"
