--- a/app/views/layouts/_form.html.slim
+++ b/app/views/layouts/_form.html.slim
@@ -17,5 +17,7 @@
       .col-md-3
         = f.label :priority
         = f.select :priority, Task.priorities.keys.to_a, {}, class: 'form-control'
+    .form-group.form-check-label
+      = f.collection_check_boxes(:label_ids, Label.all, :id, :name)
     .form-group
       = f.submit "Submit", class:"btn btn-outline-warning"
