--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -30,7 +30,8 @@ table.table.table-hover.table-sm
         = task.priority
       td
         - task.labels.each do |label|
-          label.name
+          .badge.badge-pill.badge-warning.mr-1
+            = label.name
       td
         = link_to edit_task_path(task.id)
           i.fa.fa-edit.fa-2x
