--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -26,5 +26,5 @@ table.table.table-hover.table-sm
         td
           = link_to edit_admin_user_path(user.id)
             i.fa.fa-edit.fa-2x
-          = link_to [:admin, user], method: :delete, data:{ confirm: "Are you sure you wanna delete 【#{user.name}】?"}
+          span.delete= link_to [:admin, user], method: :delete, remote: true, data:{ confirm: "Are you sure you wanna delete 【#{user.name}】?"}
             i.fa.fa-trash.fa-2x
