--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -36,6 +36,6 @@ table.table.table-hover.table-sm
         = link_to edit_task_path(task.id)
           i.fa.fa-edit.fa-2x
         span.delete= link_to task, method: :delete, remote: true, data:{ confirm: "Are you sure you wanna delete 【#{task.name}】?"}
-          .i.fa.fa-trash.fa-2x
+          i.fa.fa-trash.fa-2x
       td = button_to 'Done', done_path(task), method: :post, class:"btn btn-outline-warning"
 = paginate @tasks
